Add Coinbase Commerce modal

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ content="a collective prize to recognize the scientists who contributed to the C
 
       .title-container {
         padding: .5rem;
-        background-color: #967100;
+        background: #967100;
         text-align: center;
         color: white;
       }
