--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ content="a collective prize to recognize the scientists who contributed to the C
   <body>
     <header class="title-container">
       <h1>noble prize</h1>
-      <p>
+      <p style="font-size: 1.2em">
         a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
       </p>
     </header>
