+ favicon few tweaks in about section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ content="a collective prize to recognize the scientists who contributed to the C
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://nobleprize.com/" />
     <meta property="og:image" content="http://nobleprize.com/medals/img0001.jpg" />
-    <meta property="og:description" content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines" />
+    <meta property="og:description" content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines" />
+    <link rel="shortcut icon" type="image/png" href="medals/img0002.png"/>
     <link rel="preload" href="style.css" as="style" type="text/css" onload="this.rel='stylesheet'">
     <link rel="preload" href="lib/preact.10.5.14.module.js" as="script" type="text/javascript" crossorigin>
     <link rel="preload" href="lib/hooks.10.5.14.module.js" as="script" type="text/javascript" crossorigin>
@@ -18,7 +19,6 @@ content="a collective prize to recognize the scientists who contributed to the C
     <link rel="preload" href="script.js" as="script" type="text/javascript" crossorigin>
     <link rel="preload" href="fonts/TimesNewerRoman-Regular.0.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="fonts/TimesNewerRoman-Bold.0.otf" as="font" type="font/otf" crossorigin>
-    <link rel="preload" href="fonts/Monaco.ttf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="headshots/corbett.jpg" as="image" type="image/jpeg">
     <link rel="preload" href="headshots/cullis.jpg" as="image" type="image/jpeg">
     <link rel="preload" href="headshots/dugan.jpg" as="image" type="image/jpeg">
