--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         margin: 0;
         padding: 0;
         font-family: 'Times Newer Roman', 'Times New Roman', Times, serif;
+        line-height: 1.4;
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased !important;
         -moz-font-smoothing: antialiased !important;
