--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,10 @@ content='a collective prize to recognize the scientists who contributed to the C
     <meta property='og:url' content='http://nobleprize.com/' />
     <meta property='og:image' content='http://nobleprize.com/medals/img0001.jpg' />
     <meta property='og:description' content='A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines' />
-    <link rel='shortcut icon' type='image/png' href='../medals/img0002.png'/>
+    <link rel='shortcut icon' type='image/png' href='../medals/img0001.jpg'/>
     <link rel='preload' href='style.css' as='style' type='text/css' onload='this.rel="stylesheet"'>
-    <link rel='preload' href='index.tsx' as='script' type='text/javascript' crossorigin>
-    <link rel='preload' href='../fonts/TimesNewerRoman-Regular.0.otf' as='font' type='font/otf' crossorigin>
-    <link rel='preload' href='../fonts/TimesNewerRoman-Bold.0.otf' as='font' type='font/otf' crossorigin>
+    <link rel='preload' href='../fonts/TimesNewerRoman-Regular.otf' as='font' type='font/otf' crossorigin>
+    <link rel='preload' href='../fonts/TimesNewerRoman-Bold.otf' as='font' type='font/otf' crossorigin>
     <link rel='preload' href='../headshots/corbett.jpg' as='image' type='image/jpeg'>
     <link rel='preload' href='../headshots/cullis.jpg' as='image' type='image/jpeg'>
     <link rel='preload' href='../headshots/dugan.jpg' as='image' type='image/jpeg'>
@@ -42,7 +41,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: url('../fonts/TimesNewerRoman-Regular.0.otf') format('opentype');
+        src: url('../fonts/TimesNewerRoman-Regular.otf') format('opentype');
       }
 
       @font-face {
@@ -50,7 +49,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: url('../fonts/TimesNewerRoman-Bold.0.otf') format('opentype');
+        src: url('../fonts/TimesNewerRoman-Bold.otf') format('opentype');
       }
 
       @font-face {
