--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,25 +9,23 @@ content='a collective prize to recognize the scientists who contributed to the C
     <meta property='og:title' content='noble prize' />
     <meta property='og:type' content='article' />
     <meta property='og:url' content='http://nobleprize.com/' />
-    <meta property='og:image' content='http://nobleprize.com/medals/img0001.jpg' />
     <meta property='og:description' content='A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines' />
-    <link rel='shortcut icon' type='image/png' href='../medals/img0001.jpg'/>
+    <link rel='shortcut icon' type='image/jpeg' href='medals/img0001.jpg'/>
     <link rel='preload' href='style.css' as='style' type='text/css' onload='this.rel="stylesheet"'>
-    <link rel='preload' href='../fonts/TimesNewerRoman-Regular.otf' as='font' type='font/otf' crossorigin>
-    <link rel='preload' href='../fonts/TimesNewerRoman-Bold.otf' as='font' type='font/otf' crossorigin>
-    <link rel='preload' href='../headshots/corbett.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/cullis.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/dugan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/graham.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/holmes.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/kariko.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/maclachlan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/mcclellan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/wang.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/weissman.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/wrapp.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='../headshots/zhang.jpg' as='image' type='image/jpeg'>
-    <script src='index.tsx' type='module' defer></script>
+    <link rel='preload' href='fonts/TimesNewerRoman-Regular.otf' as='font' type='font/otf' crossorigin>
+    <link rel='preload' href='fonts/TimesNewerRoman-Bold.otf' as='font' type='font/otf' crossorigin>
+    <link rel='preload' href='headshots/corbett.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/cullis.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/dugan.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/graham.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/holmes.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/kariko.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/maclachlan.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/mcclellan.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/wang.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/weissman.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/wrapp.jpg' as='image' type='image/jpeg'>
+    <link rel='preload' href='headshots/zhang.jpg' as='image' type='image/jpeg'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <style>
       @supports (font: -apple-system-body) {
@@ -41,7 +39,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: url('../fonts/TimesNewerRoman-Regular.otf') format('opentype');
+        src: url('fonts/TimesNewerRoman-Regular.otf') format('opentype');
       }
 
       @font-face {
@@ -49,7 +47,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: url('../fonts/TimesNewerRoman-Bold.otf') format('opentype');
+        src: url('fonts/TimesNewerRoman-Bold.otf') format('opentype');
       }
 
       @font-face {
@@ -57,7 +55,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: local('Monaco'), url('../fonts/Monaco.ttf') format('truetype');
+        src: local('Monaco'), url('fonts/Monaco.ttf') format('truetype');
       }
 
       body, html {
