--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
     <title>noble prize</title>
-    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <meta name='description' 
-content='a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines'>
-    <meta name='twitter:card' value='summary'>
-    <meta property='og:title' content='noble prize' />
-    <meta property='og:type' content='article' />
-    <meta property='og:url' content='http://nobleprize.com/' />
-    <meta property='og:description' content='A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines' />
-    <link rel='shortcut icon' type='image/jpeg' href='/medals/img0001.jpg'/>
-    <link rel='preload' href='/style.css' as='style' type='text/css' onload='this.rel="stylesheet"'>
-    <link rel='preload' href='/fonts/TimesNewerRoman-Regular.otf' as='font' type='font/otf' crossorigin>
-    <link rel='preload' href='/fonts/TimesNewerRoman-Bold.otf' as='font' type='font/otf' crossorigin>
-    <link rel='preload' href='/headshots/corbett.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/cullis.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/dugan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/graham.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/holmes.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/kariko.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/maclachlan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/mcclellan.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/wang.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/weissman.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/wrapp.jpg' as='image' type='image/jpeg'>
-    <link rel='preload' href='/headshots/zhang.jpg' as='image' type='image/jpeg'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description"
+          content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines">
+    <meta name="twitter:title" content="noble prize">
+    <meta name="twitter:description"
+          content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines">
+    <meta name="twitter:image" content="http://nobleprize.com/social.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:title" content="noble prize" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://nobleprize.com/" />
+    <meta property="og:image" content="http://nobleprize.com/social.jpg" />
+    <meta property="og:description" content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines" />
+    <link rel="shortcut icon" type="image/jpeg" href="/social.jpg"/>
+    <link rel="preload" href="/style.css" as="style" type="text/css" onload="this.rel="stylesheet"">
+    <link rel="preload" href="/fonts/TimesNewerRoman-Regular.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/fonts/TimesNewerRoman-Bold.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/headshots/corbett.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/cullis.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/dugan.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/graham.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/holmes.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/kariko.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/maclachlan.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/mcclellan.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/wang.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/weissman.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/wrapp.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="/headshots/zhang.jpg" as="image" type="image/jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       @supports (font: -apple-system-body) {
         :root {
@@ -35,34 +40,34 @@ content='a collective prize to recognize the scientists who contributed to the C
       }
 
       @font-face {
-        font-family: 'Times Newer Roman';
+        font-family: "Times Newer Roman";
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: url('/fonts/TimesNewerRoman-Regular.otf') format('opentype');
+        src: url("/fonts/TimesNewerRoman-Regular.otf") format("opentype");
       }
 
       @font-face {
-        font-family: 'Times Newer Roman';
+        font-family: "Times Newer Roman";
         font-style: normal;
         font-weight: 700;
         font-display: swap;
-        src: url('/fonts/TimesNewerRoman-Bold.otf') format('opentype');
+        src: url("/fonts/TimesNewerRoman-Bold.otf") format("opentype");
       }
 
       @font-face {
-        font-family: 'Monaco';
+        font-family: "Monaco";
         font-style: normal;
         font-weight: 400;
         font-display: swap;
-        src: local('Monaco'), url('fonts/Monaco.ttf') format('truetype');
+        src: local("Monaco"), url("fonts/Monaco.ttf") format("truetype");
       }
 
       body, html {
         height: 100vh;
         margin: 0;
         padding: 0;
-        font-family: 'Times Newer Roman', 'Times New Roman', Times, serif;
+        font-family: "Times Newer Roman", "Times New Roman", Times, serif;
         line-height: 1.4;
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased !important;
@@ -95,7 +100,7 @@ content='a collective prize to recognize the scientists who contributed to the C
         box-sizing: border-box;
         text-align: center;
         border: 1px solid #967100;
-        /* font-family: 'Monaco', 'Courier New', Courier, monospace; */
+        /* font-family: "Monaco", "Courier New", Courier, monospace; */
         font-size: 1.2rem;
         padding: 1rem;
       }
@@ -153,13 +158,13 @@ content='a collective prize to recognize the scientists who contributed to the C
     </style>
   </head>
   <body>
-    <header class='title-container'>
+    <header class="title-container">
       <h1>noble prize</h1>
-      <p style='font-size: 1.2em'>
+      <p style="font-size: 1.2em">
         a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
       </p>
     </header>
-    <div id='app-root'></div>
-    <script type="module" src="bundle.js" defer></script>
+    <div id="app-root"></div>
+    <script type="module" src="/bundle.js" defer></script>
   </body>
 </html>
