--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,8 +15,8 @@
     <meta property="og:url" content="http://nobleprize.com/" />
     <meta property="og:image" content="http://nobleprize.com/social.jpg" />
     <meta property="og:description" content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines" />
-    <link rel="shortcut icon" type="image/jpeg" href="/social.jpg"/>
-    <link rel="preload" href="/style.css" as="style" type="text/css" onload="this.rel="stylesheet"">
+    <link rel="shortcut icon" type="image/jpeg" href="/social.jpg">
+    <link rel="preload" href="/style.css" as="style" type="text/css" onload="this.rel='stylesheet'">
     <link rel="preload" href="/fonts/TimesNewerRoman-Regular.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="/fonts/TimesNewerRoman-Bold.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="/headshots/corbett.jpg" as="image" type="image/jpeg">
