switch to Garamond

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,8 +16,10 @@
     <meta property="og:image" content="http://nobleprize.com/social.jpg" />
     <meta property="og:description" content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines" />
     <link rel="shortcut icon" type="image/jpeg" href="/social.jpg">
-    <link rel="preload" href="/fonts/TimesNewerRoman-Regular.otf" as="font" type="font/otf" crossorigin>
-    <link rel="preload" href="/fonts/TimesNewerRoman-Bold.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/fonts/Garamond Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Garamond Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Garamond Regular Italic.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Garamond Bold Italic.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/headshots/corbett.jpg" as="image" type="image/jpeg">
     <link rel="preload" href="/headshots/cullis.jpg" as="image" type="image/jpeg">
     <link rel="preload" href="/headshots/dugan.jpg" as="image" type="image/jpeg">
