--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,106 +23,22 @@
       content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <link rel="shortcut icon" type="image/jpeg" href="/social.jpg" />
-    <link
-      rel="preload"
-      href="/fonts/Garamond Regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/Garamond Bold.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/Garamond Regular Italic.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/Garamond Bold Italic.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/headshots/corbett.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/cullis.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/dugan.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/graham.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/holmes.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/kariko.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/maclachlan.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/mcclellan.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/wang.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/weissman.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/wrapp.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link
-      rel="preload"
-      href="/headshots/zhang.jpg"
-      as="image"
-      type="image/jpeg"
-    />
+    <link rel="preload" href="/fonts/Garamond Regular.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/Garamond Bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/Garamond Regular Italic.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/Garamond Bold Italic.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/headshots/corbett.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/cullis.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/dugan.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/graham.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/holmes.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/kariko.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/maclachlan.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/mcclellan.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/wang.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/weissman.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/wrapp.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/zhang.jpg" as="image" type="image/jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -130,8 +46,7 @@
     <header>
       <h1>noble prize</h1>
       <p style="font-size: 1.2em">
-        a collective prize to recognize the scientists who contributed to the
-        COVID-19 mRNA vaccines
+        a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
       </p>
     </header>
     <div id="app-root"></div>
