--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>noble prize</title>
+    <title>Fast Prize</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
       content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
-    <meta name="twitter:title" content="noble prize" />
+    <meta name="twitter:title" content="Fast Prize" />
     <meta
       name="twitter:description"
       content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
-    <meta name="twitter:image" content="http://nobleprize.com/social.jpg" />
+    <meta name="twitter:image" content="http://fastprize.org/social.jpg" />
     <meta name="twitter:card" content="summary" />
-    <meta property="og:title" content="noble prize" />
+    <meta property="og:title" content="Fast Prize" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://nobleprize.com/" />
-    <meta property="og:image" content="http://nobleprize.com/social.jpg" />
+    <meta property="og:url" content="http://fastprize.org/" />
+    <meta property="og:image" content="http://fastprize.org/social.jpg" />
     <meta
       property="og:description"
       content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
@@ -44,7 +44,7 @@
   </head>
   <body>
     <header>
-      <h1>noble prize</h1>
+      <h1>Fast Prize</h1>
       <p style="font-size: 1.2em">
         a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
       </p>
