link rel canonical

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -22,6 +22,7 @@
       property="og:description"
       content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
+    <link rel="canonical" href="https://fastprize.org" />
     <link rel="shortcut icon" type="image/jpeg" href="/social.jpg" />
     <link rel="preload" href="/fonts/Garamond Regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/fonts/Garamond Bold.woff2" as="font" type="font/woff2" crossorigin />
