--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,18 +12,18 @@
       name="twitter:description"
       content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
-    <meta name="twitter:image" content="http://fastprize.org/social.jpg" />
+    <meta name="twitter:image" content="http://fastprize.org/icon.png" />
     <meta name="twitter:card" content="summary" />
     <meta property="og:title" content="Fast Prize" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://fastprize.org/" />
-    <meta property="og:image" content="http://fastprize.org/social.jpg" />
+    <meta property="og:image" content="http://fastprize.org/icon.png" />
     <meta
       property="og:description"
       content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <link rel="canonical" href="https://fastprize.org" />
-    <link rel="shortcut icon" type="image/jpeg" href="/social.jpg" />
+    <link rel="shortcut icon" type="image/png" href="/icon.png" />
     <link rel="preload" href="/fonts/Garamond Regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/fonts/Garamond Bold.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/fonts/Garamond Regular Italic.woff2" as="font" type="font/woff2" crossorigin />
