--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,6 +18,20 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://fastprize.org/" />
     <meta property="og:image" content="http://fastprize.org/icon.png" />
+    <script>
+      function replace_title() {
+        const domain = window.location.hostname
+        let title = 'Fast Prize'
+        if (domain.includes('fastprizes')) {
+          title = 'Fast Prizes'
+        }
+        if (domain.includes('nobleprize')) {
+          title = 'Noble Prize'
+        }
+        document.title = title
+        document.getElementById('header-title').innerHTML = title
+      }
+    </script>
     <meta
       property="og:description"
       content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
@@ -43,9 +57,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body>
+  <body onload="replace_title()">
     <header>
-      <h1>Fast Prize</h1>
+      <h1 id="header-title">Fast Prize</h1>
       <p style="font-size: 1.2em">
         a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
       </p>
