--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
+      content="a collective prize to recognize the top scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <meta name="twitter:title" content="Fast Prize" />
     <meta
@@ -34,7 +34,7 @@
     </script>
     <meta
       property="og:description"
-      content="A collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
+      content="A collective prize to recognize the top scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <link rel="canonical" href="https://fastprize.org" />
     <link rel="shortcut icon" type="image/png" href="/icon.png" />
