changing some copy

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="a collective prize to recognize the top scientists who contributed to the COVID-19 mRNA vaccines"
+      content="a collective prize to recognize scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <meta name="twitter:title" content="Atoms Prize" />
     <meta
       name="twitter:description"
-      content="a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines"
+      content="a collective prize to recognize scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <meta name="twitter:image" content="http://prize.atoms.org/icon.png" />
     <meta name="twitter:card" content="summary" />
