+ FAQ, -DARPA, +Andrew Ward

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -35,7 +35,7 @@
     </script>
     <meta
       property="og:description"
-      content="A collective prize to recognize the top scientists who contributed to the COVID-19 mRNA vaccines"
+      content="A collective prize to recognize scientists who contributed to the COVID-19 mRNA vaccines"
     />
     <link rel="canonical" href="https://prize.atoms.org" />
     <link rel="shortcut icon" type="image/png" href="/icon.png" />
@@ -45,7 +45,7 @@
     <link rel="preload" href="/fonts/Garamond Bold Italic.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/headshots/corbett.jpg" as="image" type="image/jpeg" />
     <link rel="preload" href="/headshots/cullis.jpg" as="image" type="image/jpeg" />
-    <link rel="preload" href="/headshots/dugan.jpg" as="image" type="image/jpeg" />
+    <link rel="preload" href="/headshots/ward.jpg" as="image" type="image/jpeg" />
     <link rel="preload" href="/headshots/graham.jpg" as="image" type="image/jpeg" />
     <link rel="preload" href="/headshots/holmes.jpg" as="image" type="image/jpeg" />
     <link rel="preload" href="/headshots/kariko.jpg" as="image" type="image/jpeg" />
@@ -62,7 +62,7 @@
     <header>
       <h1 id="header-title">Atoms Prize</h1>
       <p style="font-size: 1.2em">
-        a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines
+        a collective prize to recognize scientists who contributed to the COVID-19 mRNA vaccines
       </p>
     </header>
     <div id="app-root"></div>
