feat(client): add footer

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -66,5 +66,14 @@
       </p>
     </header>
     <div id="app-root"></div>
+    <footer>
+      <a href="https://twitter.com/atoms_org" target="_blank">
+        <img width="32" height="32" src="/twitter.svg" />
+      </a>
+      <img width="32" height="32" src="/discord.svg" />
+      <a href="https://github.com/DLR-Research/atomsprize-web" target="_blank">
+        <img width="32" height="32" src="/github.svg" />
+      </a>
+    </footer>
   </body>
 </html>
